# Kenshi-Webspace

./: .gitignore  Change_Log.md  DOCUMENTATION.md  Dev_Notes.md  Error_Logs.md  NOTICE  README.md  Structure_Plan_Report.md  index.html  package-lock.json  package.json  vite.config.js
.github/: FUNDING.yml
Architecture/: Client_Architecture.md  Database_Architecture.md  (+2 more)
Services/AI-Pipeline/: .env.example  .gitignore  Dockerfile  README.md  model_plan.md  pyproject.toml  structure.md
Services/AI-Pipeline/src/: __init__.py  config.py  main.py
Services/AI-Pipeline/src/api/: router.py
Services/AI-Pipeline/src/api/v1/: blog.py  health.py  image.py  review.py
Services/AI-Pipeline/src/controllers/: blog_controller.py  image_controller.py  review_controller.py
Services/AI-Pipeline/src/core/: blog_generator.py  content_reviewer.py  image_generator.py  moderation_rules.py
Services/AI-Pipeline/src/image/: __init__.py  provider_chain.py
Services/AI-Pipeline/src/image/providers/: huggingface.py  pollinations.py  stability.py
Services/AI-Pipeline/src/llm/: __init__.py  provider_chain.py
Services/AI-Pipeline/src/llm/providers/: gemini.py  groq.py  huggingface.py  ollama.py
Services/AI-Pipeline/src/middlewares/: service_auth.py
Services/AI-Pipeline/src/models/: blog.py  common.py  image.py  review.py
Services/AI-Pipeline/src/prompts/: blog_excerpt.py  blog_full.py  blog_title.py  content_review.py  image_prompt.py
Services/AI-Pipeline/src/utils/: cost_tracker.py  logger.py
Services/AI-Pipeline/tests/: conftest.py  test_health.py  test_provider_chain.py
(+184 files in other folders)
